--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-localization": "^2.3.1",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "^2.9.1",
+    "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-simple-toast": "^1.1.4",
     "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.2",
     "react-navigation-redux-helpers": "^4.0.1",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.2",
